fix: navigation bar renders properly

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 </head>
 
 <body>
-
-    <!-- Header integrated with slider -->
+    <!-- Hero With Slider -->
     <header class="site-header transparent-header">
-        <nav class="navbar">
-            <a class="mssl-logo" href="index.html">
-                <img src="/assets/images/logos/MSSL.png" alt="MachineTech  Solutions & Services Kenya Limited">
-            </a>
+        <nav class="app-navbar">
+            <div class="navbar-logo">
+                <a href="index.html">
+                    <img src="/assets/images/logos/mssl.png" alt="MachineTech  Solutions & Services Kenya Limited">
+                </a>
+            </div>
             <div class="navbar-menu">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
@@ -40,19 +41,19 @@
     <section class="hero">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background-image: url('assets/images/slider/farm.jpg');">
+                <div class="swiper-slide" style="background-image: url('/assets/images/slider/farm.jpg');">
                     <div class="slider-caption">
                         <h2>One Industry, All Solution</h2>
                         <p>Experience industry-leading expertise in agricultural machinery and plant support.</p>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url('assets/images/slider/combine.jpg');">
+                <div class="swiper-slide" style="background-image: url('/assets/images/slider/combine.jpg');">
                     <div class="slider-caption">
                         <h2>One Industry, All Solution</h2>
                         <p>Your trusted partner for reliable solutions and timely service resolutions.</p>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url('assets/images/slider/GEN.jpg');">
+                <div class="swiper-slide" style="background-image: url('/assets/images/slider/GEN.jpg');">
                     <div class="slider-caption">
                         <h2>One Industry, All Solution</h2>
                         <p>Experience industry-leading expertise in agricultural machinery and plant support.</p>
@@ -266,7 +267,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- Custom JS -->
-    <script src="assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
