"Removed 6 image files from assets/images directory"

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
     <section class="hero">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background-image: url('/assets/images/slider/farm.jpg');">
+                <div class="swiper-slide" style="background-image: url('/assets/images/slider/farm.webp');">
                     <div class="slider-caption">
                         <h2>One Industry, All Solution</h2>
                         <p>Experience industry-leading expertise in agricultural machinery and plant support.</p>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url('/assets/images/slider/combine.jpg');">
+                <div class="swiper-slide" style="background-image: url('/assets/images/slider/combine.webp');">
                     <div class="slider-caption">
                         <h2>One Industry, All Solution</h2>
                         <p>Your trusted partner for reliable solutions and timely service resolutions.</p>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url('/assets/images/slider/GEN.jpg');">
+                <div class="swiper-slide" style="background-image: url('/assets/images/slider/GEN.webp');">
                     <div class="slider-caption">
                         <h2>One Industry, All Solution</h2>
                         <p>Experience industry-leading expertise in agricultural machinery and plant support.</p>
@@ -72,7 +72,7 @@
         <div class="section-wrapper">
             <div class="about-card">
                 <div class="about-image">
-                    <img src="assets/images/about.jpg" alt="About Us">
+                    <img src="assets/images/about.webp" alt="About Us">
                 </div>
                 <div class="about-content">
                     <h2>
@@ -90,7 +90,7 @@
     
             <div class="vision-card">
                 <div class="vision-image">
-                    <img src="assets/images/perkins.jpeg" alt="Our Vision">
+                    <img src="assets/images/perkins.webp" alt="Our Vision">
                 </div>
                 <div class="vision-content">
                     <h2>Our Mission</h2>
