--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="Assets/foincy/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="/assets/foincy/css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -25,12 +25,12 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- font awesome style -->
-  <link href="Assets/foincy/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="/assets/foincy/css/font-awesome.min.css" rel="stylesheet" />
 
   <!-- Custom styles for this template -->
-  <link href="Assets/foincy/css/style.css" rel="stylesheet" />
+  <link href="/assets/foincy/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="/Assets/foincy/css/responsive.css" rel="stylesheet" />
+  <link href="/assets/foincy/css/responsive.css" rel="stylesheet" />
 
 </head>
 
@@ -45,7 +45,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              <img src="/Assets/images/logos/MSSL.png" alt="MachineTech Solutions & Services Limited">
+              <img src="/assets/foincy/images/MSSL.png" alt="MachineTech Solutions & Services Limited">
             </a>
             </a>
 
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-6">
           <div class="img-box">
-            <img src="Assets/foincy/images/SOLIS.png" alt="">
+            <img src="/assets/foincy/images/SOLIS.png" alt="">
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
       <div class="why_us_container">
         <div class="box">
           <div class="img-box">
-            <img src="/Assets/foincy/images/w3.png" alt="">
+            <img src="/assets/foincy/images/w3.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -171,7 +171,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="Assets/foincy/images/w1.png" alt="">
+            <img src="/assets/foincy/images/w1.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -184,7 +184,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="/Assets/foincy/images/w2.png" alt="">
+            <img src="/assets/foincy/images/w2.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -197,7 +197,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="/Assets/foincy/images/w3.png" alt="">
+            <img src="/assets/foincy/images/w3.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
@@ -236,19 +236,19 @@
   <!-- footer section -->
 
   <!-- jQery -->
-  <script src="Assets/foincy/js/jquery-3.4.1.min.js"></script>
+  <script src="/assets/foincy/js/jquery-3.4.1.min.js"></script>
   <!-- popper js -->
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
   </script>
   <!-- bootstrap js -->
-  <script src="Assets/foincy/js/bootstrap.js"></script>
+  <script src="/assets/foincy/css/bootstrap.css"></script>
   <!-- owl slider -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
   <!--  OwlCarousel 2 - Filter -->
   <script src="https://huynhhuynh.github.io/owlcarousel2-filter/dist/owlcarousel2-filter.min.js"></script>
   <!-- custom js -->
-  <script src="Assets/foincy/js/custom.js"></script>
+  <script src="/assets/foincy/js/custom.js"></script>
   <!-- Google Map -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
