made changes to file paths (to render css and js correctly)

--- a/Revamp/index.html
+++ b/Revamp/index.html
@@ -8,10 +8,10 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" />
 
 		<!--=============== SWIPER CSS ===============-->
-		<link rel="stylesheet" href="/Revamp/assets/css/swiper-bundle.min.css" />
+		<link rel="stylesheet" href="/assets/css/swiper-bundle.min.css" />
 
 		<!--=============== CSS ===============-->
-		<link rel="stylesheet" href="/Revamp/assets/css/styles.css" />
+		<link rel="stylesheet" href="/assets/css/styles.css" />
 
 		<title>
             MSSL | Machine Tech Solutions & Services Kenya Limited
@@ -402,9 +402,9 @@
 		<script src=""></script>
 
 		<!--=============== SWIPER JS ===============-->
-		<script src="/Revamp/assets/js/swiper-bundle.min.js"></script>
+		<script src="/assets/js/swiper-bundle.min.js"></script>
 
 		<!--=============== MAIN JS ===============-->
-		<script src="/Revamp/assets/js/main.js"></script>
+		<script src="/assets/js/main.js"></script>
 	</body>
 </html>
