made changes to the image paths

--- a/Revamp/index.html
+++ b/Revamp/index.html
@@ -22,7 +22,7 @@
 		<header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="/Revamp/assets/img/mssl.png" alt="mssl logo">
+                    <img src="/assets/img/mssl.png" alt="mssl logo">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -73,7 +73,7 @@
 		<main class="main">
 			<!--==================== HOME ====================-->
 			<section class="home section" id="home">
-                <img class="home__lines" src="/Revamp/assets/img/home-lines-bg.svg" alt="image">
+                <img class="home__lines" src="/assets/img/home-lines-bg.svg" alt="image">
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__data">
@@ -115,8 +115,8 @@
                     </div>
 
                     <div class="home__images">
-                        <img src="/Revamp/assets/img/home-img-2.webp" alt="" class="home__img-1">
-                        <img src="/Revamp/assets/img/home-img-1.webp" alt="" class="home__img-2">
+                        <img src="/assets/img/home-img-2.webp" alt="" class="home__img-1">
+                        <img src="/assets/img/home-img-1.webp" alt="" class="home__img-2">
                     </div>
                 </div>
             </section>
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="about__images">
-                        <img src="/Revamp/assets/img/about-img-1.webp" alt="" class="about__img-1">
+                        <img src="/assets/img/about-img-1.webp" alt="" class="about__img-1">
                     </div>
                 </div>
             </section>
@@ -300,7 +300,7 @@
             <div class="footer__container container grid">
                 <div>
                     <a href="nav__logo">
-                        <img src="/Revamp/assets/img/mssl.png" alt="">
+                        <img src="/assets/img/mssl.png" alt="">
                     </a>
 
                     <p class="footer__details">
