working on the breakpoints for larger devices

--- a/Revamp/index.html
+++ b/Revamp/index.html
@@ -28,7 +28,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li>
-                            <a href="#" class="nav__link">
+                            <a href="#" class="nav__link active-link">
                                 home
                             </a>
                         </li>
@@ -180,10 +180,6 @@
                         </h2>
                     </div>
 
-                    <a href="#quote" class="button">
-                        Get A Quote
-                    </a>
-
                     <div class="services__swiper swiper">
                         <div class="swiper-wrapper">
                             <article class="services__card swiper-slide">
@@ -291,8 +287,8 @@
                 <div class="services__shape"></div>
             </section>
 
-			<!--==================== CONTACT ====================-->
-			<section class="contact section" id="contact">
+			<!--==================== QUOTE ====================-->
+			<section class="quote section" id="quote">
                 <div class="container">
                     <span class="section__subtitle">
                         get a quote
@@ -302,83 +298,60 @@
                         start your journey to agricultural success
                     </h2>
 
-                    <div class="contact__container grid">
-                        <img src="/Revamp/assets/img/contact-img.png" alt="contact" class="contact__img">
+                    <div class="quote__container grid">
+                        <!-- <img src="/Revamp/assets/img/contact-img.png" alt="contact" class="contact__img"> -->
 
+                        <div class="quote__form">
+                            <form action="/submit" method="POST">
+                                <label for="name">
+                                    full name:
+                                </label>
+                                <input class="contact__data" id="client-name" type="text" placeholder="Susan Smith" required>
 
-                        <div class="contact__form">
-                            <div class="contact__card">
-                                <div class="contact__icon"></div>
-                                <h3 class="contact__title">
+                                <label for="email">
+                                    email address (optional)
+                                </label>
+                                <input type="email" class="contact__data" id="client-email" placeholder="susansmith@gmail.com" >
 
-                                </h3>
-                                <address class="contact__info">
+                                <label for="phone">
+                                    mobile number
+                                </label>
+                                <input type="tel" class="contact__data" id="client-mobile" placeholder="+254712345678" required>
 
-                                </address>
-                            </div>
+                                <label for="subject">
+                                    subject (optional)
+                                </label>
+                                <select name="subject" id="quote-subject">
+                                    <option value="" disabled selected>
+                                        Select a service
+                                    </option>
+                                    <option value="generatorSales">
+                                        Sales of Generators
+                                    </option>
+                                    <option value="tractorMaintenance">
+                                        Tractor and Combine Maintenance & Repair
+                                    </option>
+                                    <option value="machineryParts">
+                                        Sales of Machinery Parts
+                                    </option>
+                                    <option value="fireEngineMaintenance">
+                                        Fire Engines Maintenance & Repair
+                                    </option>
+                                    <option value="plantMaintenance">
+                                        General Plant Maintenance
+                                    </option>
+                                    <option value="consultancySupplies">
+                                        General Agriculture Consultancy & Supplies
+                                    </option>
+                                </select>
 
-                            <div class="contact__card">
-                                <div class="contact__icon"></div>
-                                <h3 class="contact__title">
+                                <label for="message">Message:</label>
+                                <textarea id="message" name="client_message" placeholder="Write your message here" required></textarea>
 
-                                </h3>
-                                <address class="contact__info">
-                                    
-                                </address>
-                            </div>
-
-                            <div class="contact__card"> 
-                                <form action="/submit" method="POST">
-                                    <label for="name">
-                                        full name:
-                                    </label>
-                                    <input class="contact__data" id="client-name" type="text" placeholder="Susan Smith" required>
-
-                                    <label for="email">
-                                        email address (optional)
-                                    </label>
-                                    <input type="email" class="contact__data" id="client-email" placeholder="susansmith@gmail.com" >
-
-                                    <label for="phone">
-                                        mobile number
-                                    </label>
-                                    <input type="tel" class="contact__data" id="client-mobile" placeholder="+254712345678" required>
-
-                                    <label for="subject">
-                                        subject (optional)
-                                    </label>
-                                    <select name="subject" id="quote-subject">
-                                        <option value="" disabled selected>
-                                            Select a service
-                                        </option>
-                                        <option value="generatorSales">
-                                            Sales of Generators
-                                        </option>
-                                        <option value="tractorMaintenance">
-                                            Tractor and Combine Maintenance & Repair
-                                        </option>
-                                        <option value="machineryParts">
-                                            Sales of Machinery Parts
-                                        </option>
-                                        <option value="fireEngineMaintenance">
-                                            Fire Engines Maintenance & Repair
-                                        </option>
-                                        <option value="plantMaintenance">
-                                            General Plant Maintenance
-                                        </option>
-                                        <option value="consultancySupplies">
-                                            General Agriculture Consultancy & Supplies
-                                        </option>
-                                    </select>
-
-                                    <label for="message">Message:</label>
-                                    <textarea id="message" name="client_message" placeholder="Write your message here" required></textarea>
-
-                                    <div type="submit" class=" contact__button button">
-                                        Request a Quote
-                                    </div>
-                                </form>
-                            </div>
+                                <div type="submit" class="quote__button button">
+                                    submit quote
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -493,6 +466,10 @@
         </footer>
 
 		<!--========== SCROLL UP ==========-->
+
+        <a href="" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-line"></i>
+        </a>
 
 		<!--=============== SCROLLREVEAL ===============-->
 		<script src=""></script>
