site seems responsive, logic not yet implemented on the quote form

--- a/Revamp/index.html
+++ b/Revamp/index.html
@@ -129,7 +129,7 @@
                             about us
                         </span>
                         <h2 class="section__title">
-                            success with unmatched service and expertise <br> in agricultural machinery & service
+                            success with unmatched expertise in agricultural machinery & service
                         </h2>
 
                         <p class="about__details">
@@ -158,11 +158,19 @@
                                     extensive industrial experience
                                 </span>
                             </li>
+
+                            <li class="about__list-item">
+                                <i class="ri-checkbox-circle-line"></i>
+                                <span>
+                                    guaranteed quality of service
+                                </span>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="about__images">
                         <img src="/Revamp/assets/img/about-img-1.webp" alt="" class="about__img-1">
+                        <img src="/Revamp/assets/img/about-img-2.webp" alt="" class="about__img-2">
                     </div>
                 </div>
             </section>
