deleted the whole mssl folder, it was redundant

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Hero Section with Swiper Slider -->
     <section class="hero">
-        <div class="swiper-container">
+        <div class="swiper-container swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide" style="background-image: url('/assets/images/slider/farm.webp');">
                     <div class="slider-caption">
