--- a/Revamp/index.html
+++ b/Revamp/index.html
@@ -8,10 +8,10 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" />
 
 		<!--=============== SWIPER CSS ===============-->
-		<link rel="stylesheet" href="/Revamp/assets/css/swiper-bundle.min.css" />
+		<link rel="stylesheet" href="/assets/css/swiper-bundle.min.css" />
 
 		<!--=============== CSS ===============-->
-		<link rel="stylesheet" href="/Revamp/assets/css/styles.css" />
+		<link rel="stylesheet" href="/assets/css/styles.css" />
 
 		<title>
             MSSL | Machine Tech Solutions & Services Kenya Limited
@@ -22,7 +22,7 @@
 		<header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="/Revamp/assets/img/mssl.png" alt="mssl logo">
+                    <img src="/assets/img/mssl.png" alt="mssl logo">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -73,7 +73,7 @@
 		<main class="main">
 			<!--==================== HOME ====================-->
 			<section class="home section" id="home">
-                <img class="home__lines" src="/Revamp/assets/img/home-lines-bg.svg" alt="image">
+                <img class="home__lines" src="/assets/img/home-lines-bg.svg" alt="image">
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__data">
@@ -115,8 +115,8 @@
                     </div>
 
                     <div class="home__images">
-                        <img src="/Revamp/assets/img/home-img-2.webp" alt="" class="home__img-1">
-                        <img src="/Revamp/assets/img/home-img-1.webp" alt="" class="home__img-2">
+                        <img src="/assets/img/home-img-2.webp" alt="" class="home__img-1">
+                        <img src="/assets/img/home-img-1.webp" alt="" class="home__img-2">
                     </div>
                 </div>
             </section>
@@ -169,8 +169,8 @@
                     </div>
 
                     <div class="about__images">
-                        <img src="/Revamp/assets/img/about-img-1.webp" alt="" class="about__img-1">
-                        <img src="/Revamp/assets/img/about-img-2.webp" alt="" class="about__img-2">
+                        <img src="/assets/img/about-img-1.webp" alt="" class="about__img-1">
+                        <img src="/assets/img/about-img-2.webp" alt="" class="about__img-2">
                     </div>
                 </div>
             </section>
@@ -371,7 +371,7 @@
             <div class="footer__container container grid">
                 <div>
                     <a class="footer__logo" href="">
-                        <img src="/Revamp/assets/img/mssl.png" alt="logo">
+                        <img src="/assets/img/mssl.png" alt="logo">
                     </a>
 
                     <p class="footer__details">
@@ -483,9 +483,9 @@
 		<script src=""></script>
 
 		<!--=============== SWIPER JS ===============-->
-		<script src="/Revamp/assets/js/swiper-bundle.min.js"></script>
+		<script src="/assets/js/swiper-bundle.min.js"></script>
 
 		<!--=============== MAIN JS ===============-->
-		<script src="/Revamp/assets/js/main.js"></script>
+		<script src="/assets/js/main.js"></script>
 	</body>
 </html>
